--- a/aplicacion/templates/registro_lactantes.html
+++ b/aplicacion/templates/registro_lactantes.html
@@ -8,7 +8,7 @@ $def with (return_url, error_message, areas)
 </head>
 <body class="p-8">
 
-    <h1 class="text-2xl font-bold mb-4">Registrar Lactante (Versión de Prueba)</h1>
+    <h1 class="text-2xl font-bold mb-4">Registrar Lactante</h1>
 
     <a href="$return_url" class="text-blue-500">&larr; Regresar</a>
 
